--- a/css/style.css
+++ b/css/style.css
@@ -1979,6 +1979,30 @@ a.pa_italic:focus {
     -o-transition: .5s all;
     -ms-transition: .5s all;
 }
+.signin-form button {
+    outline: none;
+    padding: 0.9em 0;
+    width: 100%;
+    text-align: center;
+    font-size: 1em;
+    margin-top: 1em;
+    border: none;
+    color: #FFFFFF;
+    cursor: pointer;
+    background: #86c724;
+    box-shadow: 0px 2px 1px rgba(28, 28, 29, 0.42);
+    border-radius: 22px;
+
+}
+.signin-form button:hover {
+    color: #fff;
+    background: #212121;
+    transition: .5s all;
+    -webkit-transition: .5s all;
+    -moz-transition: .5s all;
+    -o-transition: .5s all;
+    -ms-transition: .5s all;
+}
 .signin-form p a {
     font-size: 0.875em;
     color: #212121;
