犀利的一波操作，按篇名搜索完成

--- a/css/results.css
+++ b/css/results.css
@@ -29,3 +29,8 @@
     width: 110px;
     height: 30px;
 }
+#current_page{
+    color: #23527c!important;
+    background-color: #eee!important;
+    border-color: #ddd;
+}
