--- a/css/style.css
+++ b/css/style.css
@@ -338,16 +338,15 @@ ul.dropdown-menu {
 }
 .reload, .btn{
       display: inline-block;
-      border: 4px solid #A2261E;
       border-radius: 5px;
       -moz-border-radius: 5px;
       -webkit-border-radius: 5px;
-      background: #CC3126;
+      background: #FFFFFF;
       display: inline-block;
       line-height: 100%;
       padding: 0.7em;
       text-decoration: none;
-      color: #fff;
+      color: #0f1215;
       width: 100px;
       line-height: 140%;
       font-size: 17px;
@@ -355,8 +354,59 @@ ul.dropdown-menu {
       font-weight: bold;
 }
 .reload:hover{
-    background: #A2261E;
+    background: #3b3b3b;
 }
+
+.btn-light {
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    border-radius: .25rem;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+
+    color: #212529;
+    background-color: #f8f9fa;
+    border-color: #f8f9fa;
+}
+
+.btn-light:hover {
+    color: #212529;
+    background-color: #e2e6ea;
+    border-color: #dae0e5;
+}
+
+.btn-light.focus, .btn-light:focus {
+    box-shadow: 0 0 0 .2rem rgba(248, 249, 250, .5);
+}
+
+.btn-light.disabled, .btn-light:disabled {
+    color: #212529;
+    background-color: #f8f9fa;
+    border-color: #f8f9fa
+}
+
+.btn-light:not(:disabled):not(.disabled).active, .btn-light:not(:disabled):not(.disabled):active, .show > .btn-light.dropdown-toggle {
+    color: #212529;
+    background-color: #dae0e5;
+    border-color: #d3d9df
+}
+
+.btn-light:not(:disabled):not(.disabled).active:focus, .btn-light:not(:disabled):not(.disabled):active:focus, .show > .btn-light.dropdown-toggle:focus {
+    box-shadow: 0 0 0 .2rem rgba(248, 249, 250, .5)
+}
+
+.aside-btn{
+    border-bottom: 1px;
+    border-bottom-color: #0f1215;
+}
+
 .page_container {
     max-width: 70%;
 	margin: 50px auto;
@@ -2756,7 +2806,8 @@ i.fa.fa-pencil{
     display: block;
     margin: 1em 0;
 }
-.agileits-contact-address ul li i.fa.fa-phone,.agileits-contact-address ul li i.fa.fa-map-marker {
+.agileits-contact-address ul li i.fa.fa-phone,.agileits-contact-address ul li i.fa.fa-map-marker, .agileits-contact-address ul li i.fa.fa-user,
+.agileits-contact-address ul li i.fa.fa-money,.agileits-contact-address ul li i.fa.fa-envelope, .agileits-contact-address ul li i.fa.fa-credit-card{
     height: 40px;
     width: 40px;
     background: #86c724;
