--- a/css/results.css
+++ b/css/results.css
@@ -57,3 +57,11 @@
 .blog-left-right-bottom-results p{
     margin-bottom: 1em;
 }
+.container_pro{
+    width: 100%;
+}
+.professorInfo{
+    color: white;
+    font-size: 1.5em;
+    margin-top: 10px;
+}
